GitVersion1/objects/uf__User_Status__c.object
<CustomObject>
    <fields>
        <fullName>uf__Adoption_Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adoption Champion</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uf__Cost_of_Inactivity__c</fullName>
        <formula>(uf__Cost_per_Salesforce_License__c/365) *  uf__Days_Since_Login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Inactivity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uf__Cost_per_Salesforce_License__c</fullName>
        <label>Cost per Salesforce License</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>uf__Date_of_Last_Login__c</fullName>
        <label>Date of Last Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>uf__Days_Since_Login__c</fullName>
        <label>Days Since Login</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uf__Inactivity_Explanation__c</fullName>
        <label>Inactivity Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>uf__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Statuses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>uf__Reason_for_Inactivity__c</fullName>
        <inlineHelpText>To be filled in by inactive user</inlineHelpText>
        <label>Reason for Inactivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holiday / Vacation</fullName>
                </value>
                <value>
                    <fullName>Business Travel</fullName>
                </value>
                <value>
                    <fullName>Approved Absence</fullName>
                </value>
                <value>
                    <fullName>No Longer Need Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uf__Status_Type__c</fullName>
        <label>Status Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactivity</fullName>
                </value>
                <value>
                    <fullName>Never Logged In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uf__User_Chatter_Message__c</fullName>
        <inlineHelpText>Enter the message that should be auto posted to the User&apos;s chatter, e.g. &quot;I haven&apos;t logged in for a while, please give some encouragement!&quot;  Set via Workflow Field Update.</inlineHelpText>
        <label>User Chatter Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__User_Email__c</fullName>
        <formula>uf__User__r.Email</formula>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Status</label>
    <listViews>
        <fullName>uf__All</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>uf__All15DaysSince</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Days_Since_Login__c</field>
            <operation>equals</operation>
            <value>15</value>
        </filters>
        <label>All - 15 Days Since Login</label>
    </listViews>
    <listViews>
        <fullName>uf__All30DaysSince</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Days_Since_Login__c</field>
            <operation>equals</operation>
            <value>30</value>
        </filters>
        <label>All - 30 Days Since Login</label>
    </listViews>
    <listViews>
        <fullName>uf__All60DaysSince</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Days_Since_Login__c</field>
            <operation>equals</operation>
            <value>60</value>
        </filters>
        <label>All - 60 Days Since Login</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>uf__All90DaysSince</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Days_Since_Login__c</field>
            <operation>equals</operation>
            <value>90</value>
        </filters>
        <label>All - 90 Days Since Login</label>
    </listViews>
    <listViews>
        <fullName>uf__AllInactivity</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Status_Type__c</field>
            <operation>equals</operation>
            <value>Inactivity</value>
        </filters>
        <label>All - Inactivity</label>
    </listViews>
    <listViews>
        <fullName>uf__AllLast30</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All - Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>uf__AllLast7</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All - Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>uf__AllNever</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>uf__Status_Type__c</field>
            <operation>equals</operation>
            <value>Never Logged In</value>
        </filters>
        <label>All - Never Logged In</label>
    </listViews>
    <listViews>
        <fullName>uf__AllToday</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All - Today</label>
    </listViews>
    <listViews>
        <fullName>uf__AllYesterday</fullName>
        <columns>NAME</columns>
        <columns>uf__User__c</columns>
        <columns>uf__Manager__c</columns>
        <columns>uf__Status_Type__c</columns>
        <columns>uf__Days_Since_Login__c</columns>
        <columns>uf__Cost_of_Inactivity__c</columns>
        <columns>uf__Reason_for_Inactivity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>All - Yesterday</label>
    </listViews>
    <nameField>
        <displayFormat>US-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Status ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>